--- a/public/index.html
+++ b/public/index.html
@@ -11,26 +11,7 @@
   <title>Nababrata | Portfolio</title>
   <meta name="description" content="Self Developed personal website build with Javascript Framework">
 
-  <!-- Google / Search Engine Tags -->
-  <meta itemprop="name" content="Nababrata | Portfolio">
-  <meta itemprop="description" content="Self Developed personal website build with Javascript Framework">
-  <meta itemprop="image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
-
-  <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://soumyajit.vercel.app">
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Nababrata | Portfolio">
-  <meta property="og:description" content="Self Developed personal website build with Javascript Framework">
-  <meta property="og:image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
-
-  <!-- Twitter Meta Tags -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Nababrata | Portfolio">
-  <meta name="twitter:description" content="Self Developed personal website build with Javascript Framework">
-  <meta name="twitter:image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+  <!-- content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK"> -->
 </head>
 
 <body>
